--- a/app/views/startup/new.html.erb
+++ b/app/views/startup/new.html.erb
@@ -1,1 +1,17 @@
-new.html.erb
+<%= form_for @startup do |f|%>
+<%= f.label :name%>
+<%= f.text_field :name %>
+<%= f.label :logo_url%>
+<%= f.text_field :logo_url %>
+<%= f.label :state%>
+<%= f.text_field :state %>
+<%= f.label :description%>
+<%= f.text_area :description%>
+<%= f.label :pitch %>
+<%= f.text_area :pitch %>
+<%= f.label :markets%>
+<%= f.text_area :markets%>
+<%= f.text_field :angel_url %>
+<%end%>
+
+
