state finder is working

--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -13,7 +13,7 @@
 <%= f.label :description%>
 <%= f.text_area :description%><br/>
 <%= f.label :pitch %>
-<%= f.text_area :pitch %><br/>
+<%= f.text_field :pitch %><br/>
 <%= f.label :markets%>
 <%= f.text_area :markets%><br/>
 <%= f.label :angel_url %>
