--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -10,6 +10,8 @@
 <%= f.text_field :logo_url %><br/>
 <%= f.label :state%>
 <%= f.text_field :state %><br/>
+<%= f.label :city%>
+<%= f.text_field :city %><br/>
 <%= f.label :description%>
 <%= f.text_area :description%><br/>
 <%= f.label :pitch %>
