--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -1,26 +1,52 @@
 
 <div class ="container">
 <%= form_for @startup do |f|%>
-<%= f.label :website%>
-<%= f.text_field :website%>
-<input type="submit" id="pull_angel" value="Fill From Angellist">
-<%= f.label :name%>
-<%= f.text_field :name %><br/>
-<%= f.label :logo_url%>
-<%= f.text_field :logo_url %><br/>
-<%= f.label :state%>
-<%= f.text_field :state %><br/>
-<%= f.label :city%>
-<%= f.text_field :city %><br/>
-<%= f.label :description%>
-<%= f.text_area :description%><br/>
-<%= f.label :pitch %>
-<%= f.text_field :pitch %><br/>
-<%= f.label :markets%>
-<%= f.text_area :markets%><br/>
-<%= f.label :angel_url %>
-<%= f.text_field :angel_url %><br/>
-<%= f.submit %>
-
+<div>
+<ul class="form">
+	<li>
+		<%= f.label :website%>
+		<%= f.text_field :website%>
+		<input type="submit" id="pull_website" value="Fill From Angellist">
+	</li>
+	<li>
+		<%= f.label :name%>
+		<%= f.text_field :name %>
+		<input type="submit" id="pull_name" value="Fill From Angellist">
+	</li>
+	<li>
+		<%= f.label :logo_url%>
+		<%= f.text_field :logo_url %>
+	</li>
+	<li>
+		<%= f.label :state%>
+		<%= f.text_field :state %>
+	</li>
+	<li>
+		<%= f.label :city%>
+		<%= f.text_field :city %>
+	</li>
+	<li>
+		<%= f.label :description%>
+		<%= f.text_area :description%><br/>
+	</li>
+	<li>
+		<%= f.label :pitch %>
+		<%= f.text_field :pitch %><br/>
+	</li>
+	<li>
+		<%= f.label :markets%>
+		<%= f.text_area :markets%><br/>
+	</li>
+	<li>
+		<%= f.label :angel_url %>
+		<%= f.text_field :angel_url %><br/>
+	</li>
+	<li>
+		<%= f.submit %>
+	</li>
+</ul>
 <%end%>
+</div>
+<div class=photo>
+</div>
 </div>
