--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -1,7 +1,10 @@
 
 <div class ="container">
-<%= form_for @startup do |f|%>
+  <h1>
+  Visible Project
+  </h1>
 <div>
+<%= form_for @startup do |f|%>
 <ul class="form">
 	<li>
 		<%= f.label :website%>
