--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -1,6 +1,31 @@
+body{
+
+    font: normal 18px 'Open Sans';
+    font-weight: 300px;
+}
+
+#new_startup input[type="submit"] {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font: normal 14px 'Open Sans';
+  font-weight: 600;
+  color: white;
+  border-radius: 7px;
+  position: absolute;
+  padding: 10px;
+  background: rgb(228, 228, 228);
+  position: absolute;
+  right: 232px;
+}
+
+textarea{
+  height: 0px;
+}
+
 
 .form li {
-padding: 14px;
+padding-bottom: 31px;
 list-style: none;
 }
 
@@ -29,19 +54,45 @@ font-family: 'Roboto Condensed', sans-serif;
 left:0px;
 }
 
-#new_startup input{
+#new_startup input {
+  border: 5px solid rgb(228, 228, 228);
+  -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
+  box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
+  padding: 7px;
+  background: rgba(255,255,255,0.5);
+  margin: 0 0 10px 0;
   float: right;
 }
 
 #pull_website {
+  font: normal 14px 'Open Sans';
+  font-weight: 600;
+  color: white;
+  border-radius: 7px;
   position: absolute;
-  top: 111px;
-  right: 105px;
+  top: 109px;
+  right: 50px;
+  border: 5px solid rgb(228, 228, 228);
+  padding: 10px;
+  background: rgb(228, 228, 228);
 }
 
 
-
 #new_startup textarea{
+  border: 5px solid rgb(228, 228, 228);
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+  padding: 15px;
+  background: rgba(255,255,255,0.5);
+  margin: 0 0 10px 0;
   float: right;
 }
 
