--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -26,7 +26,7 @@
 		<%= f.label :city%>
 		<%= f.text_field :city %>
 	  </li>
-	  <li>
+	  <li class = "textarea">
 		<%= f.label :description%>
 		<%= f.text_area :description%><br/>
 	  </li>
@@ -34,7 +34,7 @@
 		<%= f.label :pitch %>
 		<%= f.text_field :pitch %><br/>
 	  </li>
-	  <li>
+	  <li class= "textarea">
 		<%= f.label :markets%>
 		<%= f.text_area :markets%><br/>
 	  </li>
@@ -50,7 +50,7 @@
     <%end%>
 
   </div>
-      	<input type="submit" id="pull_website" value="Fill From Angellist">
+  <input type="submit" id="pull_website" value="Fill From Angellist">
 <div class=photo>
 </div>
 </div>
