new logo file field

--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -18,6 +18,11 @@
 		<%= f.label :logo_url%>
 		<%= f.text_field :logo_url %>
 	  </li>
+      <li> 
+        <%= f.label :logo %>
+        <%= f.file_field :logo %>
+      </li>
+
 	  <li>
 		<%= f.label :state%>
 		<%= f.text_field :state %>
