--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -4,6 +4,11 @@ body{
     font-weight: 300px;
 }
 
+
+textarea{
+  height: 0px;
+}
+
 #new_startup input[type="submit"] {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -19,10 +24,33 @@ body{
   right: 232px;
 }
 
-textarea{
-  height: 0px;
+#avatar{
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font: normal 14px 'Open Sans';
+  font-weight: 600;
+  color: white;
+  border-radius: 7px;
+  position: absolute;
+  padding: 10px;
+  background: rgb(228, 228, 228);
 }
 
+#avatar input[type="file"] {
+    -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font: normal 14px 'Open Sans';
+  font-weight: 600;
+  color: white;
+  border-radius: 7px;
+  position: absolute;
+  padding: 10px;
+  background: rgb(228, 228, 228);
+  position: absolute;
+  right: 232px;
+}
 
 .form li {
 padding-bottom: 31px;
@@ -34,7 +62,6 @@ list-style: none;
   margin: 20px auto;
   width: 600px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
   position: relative;
 }
 .container div{
