--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -24,21 +24,19 @@ textarea{
   right: 232px;
 }
 
-#avatar{
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  font: normal 14px 'Open Sans';
-  font-weight: 600;
-  color: white;
-  border-radius: 7px;
-  position: absolute;
-  padding: 10px;
-  background: rgb(228, 228, 228);
+#startup_logo{
+  visibility: hidden;
+  width: 0;
+  height: 0;
 }
 
-#avatar input[type="file"] {
-    -webkit-box-shadow: none;
+.form li {
+padding-bottom: 31px;
+list-style: none;
+}
+
+#fileSelect{
+  -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
   font: normal 14px 'Open Sans';
@@ -52,9 +50,8 @@ textarea{
   right: 232px;
 }
 
-.form li {
-padding-bottom: 31px;
-list-style: none;
+.require{
+  color:red;
 }
 
 
@@ -98,7 +95,7 @@ left:0px;
   color: white;
   border-radius: 7px;
   position: absolute;
-  top: 109px;
+  top: 84px;
   right: 50px;
   border: 5px solid rgb(228, 228, 228);
   padding: 10px;
