--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -66,9 +66,11 @@ list-style: none;
 }
 
 .photo {
+border: 4px solid rgb(226, 226, 226);
+border-radius: 21px;
 position: absolute;
-top: 170px;
-right: 55px;
+top: 180px;
+right: 15px;
 }
 
 #new_startup label {
@@ -96,7 +98,7 @@ left:0px;
   border-radius: 7px;
   position: absolute;
   top: 84px;
-  right: 50px;
+  right: 15px;
   border: 5px solid rgb(228, 228, 228);
   padding: 10px;
   background: rgb(228, 228, 228);
