--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class ="container">
   <h1>
-  Visible Project
+  Create a Startup 
   </h1>
   <div>
     <%= form_for @startup do |f|%>
@@ -21,7 +21,7 @@
       <li> 
         <%= f.label :logo , raw("Logo <span class=\"require\"></span>")%>
         <%= f.file_field :logo %>
-        <button id="fileSelect">Select some files</button>
+        <button id="fileSelect">Browse Photos</button>
       </li>
 
 	  <li>
